fixed whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,3 @@
 .App-title {
   font-size: 1.5em;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
